more seperation of app from app frame

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "./service/ux.js",
   "type": "module",
   "scripts": {
+    "lint": "eslint .",
+    "run:auth": "node service/auth.js"
   },
   "repository": {
     "type": "git",
