more of this ... :)

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@cision/applejacks",
+  "name": "@johncision/applejacks",
   "version": "1.0.0",
   "description": "",
   "main": "./",
