update for npm pub

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,13 +12,11 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          registry-url: 'https://npm.pkg.github.com'
-          scope: '@cision'
+          node-version: 16
+          registry-url: https://registry.npmjs.org/
       - run: npm install
-      - run: npm run test:web --if-present
-      - run: npm run test:service --if-present
-      - run: npm run lint:web --if-present
-      - run: npm run lint:service --if-present
-      - run: npm run coverage:web --if-present
-      - run: npm run coverage:server --if-present
+      - run: npm run test --if-present
+      - run: npm run lint --if-present
+      - run: npm run coverage --if-present
+
 
