--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 	"scripts": {
 		"lint": "eslint --quiet .",
 		"test": "mocha .",
-		"coverage": "c8 --check-coverage --all npm run test -- --no-parallel --reporter min"
+		"coverage": "c8 --lines 2 --functions 0 --branches 2 --check-coverage --all npm run test -- --no-parallel --reporter min"
 	},
 	"eslintConfig": {
 		"extends": [
@@ -30,7 +30,31 @@
 		],
 		"ignorePatterns": "spec/**",
 		"env": {
-			"node": true
+			"node": false,
+			"browser": true
+		},
+		"rules": {
+			"class-methods-use-this": "warn",
+			"no-empty-function": "warn",
+			"fp/no-nil": "off",
+      "immutable/no-this": "warn",
+			"fp/no-unused-expression": "off",
+      "no-unused-vars": [
+				"error",
+				{
+					"argsIgnorePattern": "^_",
+					"varsIgnorePattern": "^_"
+				}
+			],
+			"spellcheck/spell-checker": [
+        "error",
+        {
+          "minLength": 4,
+          "skipWords": [
+            "checkbox"
+          ]
+        }
+      ]
 		}
 	},
 	"mocha": {
