--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,6 +6,26 @@ on:
 jobs:
   Release:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        package: [button]
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - uses: actions/checkout@v2
+      - run: ch src/${{ matrix.package }}
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 16
+          registry-url: https://registry.npmjs.org/
+      - run: npm install
+      - run: npm publish --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+  ReleaseMono:
+    runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
