--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
       packages: write
     steps:
       - uses: actions/checkout@v2
-      - run: ch src/${{ matrix.package }}
+      - run: cd src/${{ matrix.package }}
       - uses: actions/setup-node@v2
         with:
           node-version: 16
