ignore test dir for lint

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
 		"extends": [
 			"@johncision/eslint-config/module"
 		],
-		"ignorePatterns": "spec/**",
+		"ignorePatterns": [ "spec/**", "test/**" ],
 		"env": {
 			"node": false,
 			"browser": true
