--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,13 +6,13 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        node: [ 14, 16 ]
+        node: [ 14, 16, 17 ]
         os: [ ubuntu-latest ]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: 16
+          node-version: 17
           registry-url: https://registry.npmjs.org/
       - run: npm install
       - run: npm run test --if-present
